--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "prettier": "^2.6.2",
     "react": "^18.0.0",
+    "react-apple-emojis": "^2.2.1",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
